# bosch-alarm-mode2

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
bosch_alarm_mode2/: __init__.py  connection.py  const.py  history.py  history_const.py  panel.py  utils.py
