[tool.poetry]
name = "bosch-alarm-mode2"
version = "0.4.1"
description = "An async Python library for interacting with Bosch Alarm Panels supporting the 'Mode 2' API."
authors = ["Michael Grigoriev <mag@luminal.org>"]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
