[project]
name = "bosch-alarm-mode2"
description = "An async Python library for interacting with Bosch Alarm Panels supporting the 'Mode 2' API."
readme = "README.md"
authors = [{ name = "Michael Grigoriev", email = "mag@luminal.org" }]
requires-python = ">= 3.11"
classifiers = [
  'Development Status :: 5 - Production/Stable',
  "Intended Audience :: Developers",
  "Topic :: Home Automation",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/mag1024/bosch-alarm-mode2"
Repository = "https://github.com/mag1024/bosch-alarm-mode2.git"
Issues = "https://github.com/mag1024/bosch-alarm-mode2/issues"

[build-system]
requires = ["hatchling",  "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.9.7",
]

[tool.uv]
trusted-publishing = "always"

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["F403", "F405", "E722"]